--- a/userapp/templates/userapp/my_orders.html
+++ b/userapp/templates/userapp/my_orders.html
@@ -98,7 +98,7 @@
         </div>
         <h5 class="text-muted">No orders yet</h5>
         <p class="text-muted">Your orders will appear here once you make a purchase</p>
-        <a href="{% url 'home' %}" class="btn btn-primary mt-3">Continue Shopping</a>
+        <a href="{% url 'user_dashboard' %}" class="btn btn-primary mt-3">Continue Shopping</a>
     </div>
     {% endif %}
 </div>
