--- a/userapp/templates/userapp/orders_received.html
+++ b/userapp/templates/userapp/orders_received.html
@@ -33,13 +33,12 @@
                         <h6 class="fw-bold mb-2">Buyer Info</h6>
                         <div class="d-flex align-items-center mb-2">
                             <i class="bi bi-person me-2 text-muted"></i>
-                            <!-- FIXED: Handle cases where user doesn't have a full name -->
                             {% with user=received.order.user %}
-                                {% if user.get_full_name %}
-                                    <span>{{ user.get_full_name }}</span>
-                                {% else %}
-                                    <span>{{ user.username }}</span>
-                                {% endif %}
+                            <span>
+                                <span>{{ received.order.user.username }}</span>
+
+                            </span>
+                            
                             {% endwith %}
                         </div>
                         <div class="d-flex align-items-center">
