--- a/adminapp/templates/adminapp/admin_base.html
+++ b/adminapp/templates/adminapp/admin_base.html
@@ -458,6 +458,12 @@
                     <i class="fas fa-box"></i>
                     <span>Manage Products</span>
                 </a></li>
+
+                <!-- Add Reports Link Here -->
+                <li><a href="{% url 'reports' %}" class="{% if 'reports' in request.resolver_match.url_name %}active{% endif %}">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Reports & Analytics</span>
+                </a></li>
             </ul>
             
             <h3>Catalog Structure</h3>
